2012-08-21  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Use string instead of number for rules level in header.

2012-08-13  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Added timeline listing.

2012-08-09  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Started adding more code documentation to summary.py.

2012-08-03  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Added engine type to movement listing.

2012-07-29  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Reorganized armor listing.

2012-07-27  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Moved selector list creation in summary.py to separate function.

	* Moved file list creation in summary.py to separate function.

	* Added VTOL filter.

2012-07-23  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Added more code documentation to jump.py.

2012-07-21  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Started using Sphinx for autodocumention, added more
	documentation to util.py functions.

2012-07-19  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Exclude designs with non-missile long-range weapons from being
	classed as missile boats.

	* Added secondary sort by jump-distance for speed listing.

2012-07-16  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Added offensive speed factor to speed listing.

	* Added a common code interface Unit, for mechs and combat vehicles.

2012-07-15  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* First public alpha v0.0.1 becomes available.
