@@ -1,5 +1,7 @@
 2012-08-21  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
+	* Added filter for jumping units.
+
 	* Use string instead of number for rules level in header.
 
 2012-08-13  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
